Metaballs appended as orphan #58304

Closed
opened 2018-11-30 14:26:19 +01:00 by Jon McKay · 10 comments

System Information
Operating system: Win 10
Graphics card: GTX 750 Ti

Blender Version
Broken: 2.8 Beta (4c31bed6b4)

Worked: (optional)

Short description of error
Appended Metaballs do not appear in workspace - Only Orphaned

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
New Default Blender
Delete Cube
Create MetaBall
Save file (e.g. MetaTest1.blend)
File - New -> General
Delete Cube
File - Append...
Select MetaTest1.blend from previous step
Select MetaBall -> MBall
Click Append

No additional meta objects appear in Blender
Select "Orphan Data" from outliner menu
MBall appears in Orphaned Data outlier.

Expected
Meta ball from external file should appear in 3D Window and be added to current collection.

**System Information** Operating system: Win 10 Graphics card: GTX 750 Ti **Blender Version** Broken: 2.8 Beta (4c31bed6b46) Worked: (optional) **Short description of error** Appended Metaballs do not appear in workspace - Only Orphaned **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). New Default Blender Delete Cube Create MetaBall Save file (e.g. MetaTest1.blend) File - New -> General Delete Cube File - Append... Select MetaTest1.blend from previous step Select MetaBall -> MBall Click Append No additional meta objects appear in Blender Select "Orphan Data" from outliner menu MBall appears in Orphaned Data outlier. **Expected** Meta ball from external file should appear in 3D Window and be added to current collection.
Author

Added subscriber: @JonMcKay

Added subscriber: @JonMcKay
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Confirmed but it does work if you Append -> Object -> Mball, this might be undefined behaviour as it works the same as 2.79

Confirmed but it does work if you Append -> Object -> Mball, this might be undefined behaviour as it works the same as 2.79
Author

I'm changing this to Low priority due to the work around above.
UI Experience should still be that if you select Metaballs to append Blender should import the Metaballs, not just the data, so I'm not dismissing it altogether.

I'm changing this to Low priority due to the work around above. UI Experience should still be that if you select Metaballs to append Blender should import the Metaballs, not just the data, so I'm not dismissing it altogether.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Campbell Barton self-assigned this 2020-09-03 08:59:29 +02:00

This is working as intended, note that in most cases you should append objects, not object data, although it's a common confusion that should be resolved.

Made a proof of concept patch to add this, D8792.

closing.

This is working as intended, note that in most cases you should append objects, not object data, although it's a common confusion that should be resolved. Made a proof of concept patch to add this, [D8792](https://archive.blender.org/developer/D8792). closing.

Note that orphan object-data can now be dragged from the outliner into the 3D view.

Note that orphan object-data can now be dragged from the outliner into the 3D view.

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Committed 748deced1c

Committed 748deced1c
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#58304
No description provided.